# VibeMouse

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: STEP1_PR_SPLIT_PLAN.zh-CN.md  TWO_STEP_MIGRATION_PLAN.md  TWO_STEP_MIGRATION_PLAN.zh-CN.md  assistant-key-detector.html
docs/plans/: 2026-03-28-typeless-dictation-core-design.md  2026-03-28-typeless-dictation-core.md
scripts/: eval_dictation_profiles.py
shared/examples/: config.example.json  dictation_eval.jsonl
shared/protocol/: COMMANDS.md  EVENTS.md
shared/schema/: config.schema.json  ipc.schema.json  status.schema.json
tests/: test_app.py  test_config.py  test_config_store.py  test_mouse_listener.py
tests/bindings/: test_resolver.py
tests/cli/: test_main.py
tests/core/: test_app.py  test_backend_status.py  test_dictionary.py  test_output.py  test_transcriber.py
tests/ipc/: __init__.py  test_client_server.py  test_messages.py
tests/listener/: test_keyboard_listener.py  test_mouse_listener.py
tests/ops/: test_deploy.py
tests/platform/: test_system_integration.py
tests/scripts/: test_eval_dictation_profiles.py
tests/settings/: test_server.py
vibemouse/: app.py  audio.py  config.py  deploy.py  doctor.py  keyboard_listener.py  logging_setup.py  main.py  mouse_listener.py  output.py  system_integration.py  transcriber.py
vibemouse/bindings/: actions.py  resolver.py
vibemouse/cli/: listener_cli.py  main.py
vibemouse/config/: __init__.py  env_overrides.py  migration.py  schema.py  store.py
vibemouse/core/: app.py  backend_status.py  output.py  (+3 more)
(+16 files in other folders)
