[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibemouse"
version = "0.2.2"
description = "Mouse side-button voice dictation with SenseVoice"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]
authors = [{ name = "VibeMouse" }]
dependencies = [
  "numpy>=1.24,<2",
  "sounddevice>=0.4.6",
  "soundfile>=0.12.1",
  "pynput>=1.7.7",
  "evdev>=1.7.1; sys_platform == 'linux'",
  "PyGObject>=3.46.0; sys_platform == 'linux'",
  "pyperclip>=1.9.0",
  "jieba>=0.42.1",
  "funasr-onnx>=0.4.1",
  "onnxruntime>=1.24.0",
  "modelscope>=1.18.0",
  "torch>=2.0.0",
]

[project.optional-dependencies]
ci = [
  "numpy>=1.24,<2",
  "pyperclip>=1.9.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
pt = [
  "funasr>=1.2.6",
]
npu = [
  "openvino>=2026.0.0",
]

[project.scripts]
vibemouse = "vibemouse.main:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["vibemouse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["windows-port", "windows-port-*"]
